[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ["py36", "py37", "py38"]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_tests = "tests"
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "TESTS"]

[tool.poetry]
name = "yamk"
version = "1.0.0"
description = "Yet another make"
authors = [
    "Stephanos Kuma <spapanik21@gmail.com>",
]

license = "LGPL-3.0+"
readme = "README.md"
include = ["CHANGELOG.md"]

repository = "https://github.com/spapanik/yamk"

keywords = ["make", "build", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.scripts]
yamk = "yamk.main:main"
yam = "yamk.main:main"

[tool.poetry.dependencies]
python = "^3.6.0"

tomlkit = "^0.7.0"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
isort = "^5.5.0"

pytest = "^6.0.0"
pytest-cov = "^2.10.0"
coveralls = "^2.1.0"

ipython = "^7.16.0"
ipdb = "^0.13.0"

flake8 = "^3.8.0"
flake8-bugbear = "^20.1.0"
flake8-builtins = "^1.5.0"
flake8-comprehensions = "^3.2.0"
flake8-eradicate = "^0.4.0"
flake8-executable = "^2.0.0"
flake8-mutable = "^1.2.0"
flake8-tidy-imports = "^4.1.0"
