[build-system]
requires = [
    "poetry_core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = [
    "py39",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
src = [
    "src",
]
target-version = "py39"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FLY",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PGH",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "COM812",
    "E501",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "FBT001",
    "PT011",
    "S101",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"mock".msg = "Use unittest.mock"
"pytz".msg = "Use zoneinfo"

[tool.ruff.lint.isort]
combine-as-imports = true
forced-separate = [
    "tests",
]
split-on-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = "tests"

[tool.coverage.run]
source = [
    "src/",
]
data_file = ".cov_cache/coverage.dat"

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.poetry]
name = "yamk"
version = "7.0.0"
description = "Yet another make"
authors = [
    "Stephanos Kuma <stephanos@kuma.ai>",
]

license = "LGPL-3.0+"
readme = "docs/README.md"

homepage = "https://yamk.readthedocs.io/en/stable/"
repository = "https://github.com/spapanik/yamk"
documentation = "https://yamk.readthedocs.io/en/stable/"

keywords = [
    "make",
    "build",
    "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.scripts]
yamk = "yamk.__main__:main"
yam = "yamk.__main__:main"

[tool.poetry.dependencies]
# python version
python = "^3.9"

# dependencies
dj_settings = "^5.0"
pyutilkit = "^0.4"

[tool.poetry.group.dev.dependencies]
ipdb = { version = "^0.13", python = "^3.10" }
ipython = { version = "^8.21", python = "^3.10" }
pickleshare = { version = "^0.7", python = "^3.10" }
pipdeptree = "^2.13"

[tool.poetry.group.lint.dependencies]
black = "^24.1"
mypy = "^1.8"
ruff = "^0.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.5"
mkdocs-material-extensions = "^1.3"
Pygments = "^2.17"
pymdown-extensions = "^10.8"
